--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 AUTH_KEY=
-CLIENT_SERVER=0.0.0.0:30000
-CLIENT_API_SERVER=0.0.0.0:30100
-CAMERA_SERVER=0.0.0.0:31000
+CLIENT_SERVER=0.0.0.0:31000
+CLIENT_API_SERVER=0.0.0.0:32000
+CAMERA_SERVER=0.0.0.0:30000
 SALT_KEY=
 SESSION_ID=SID
-REDIS_HOST=localhost
-REDIS_PORT=6379
+LILY_CERTIFICATE_BASED_DIRECTORY=/etc/letsencrypt/live/example.com
+LILY_NGINX_TARGET=/var/www/example/infra/nginx
