--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
         proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
 
         location / {
-            proxy_pass    http://api_php:32000;
+            proxy_pass    http://172.17.0.1:32000;
             proxy_redirect default;
         }
     }
@@ -46,7 +46,7 @@ http {
         proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
 
         location / {
-            proxy_pass    http://camera_php:31000;
+            proxy_pass    http://172.17.0.1:31000;
             proxy_redirect default;
         }
     }
