--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ SALT_KEY=
 SESSION_ID=SID
 LILY_CERTIFICATE_BASED_DIRECTORY=/etc/letsencrypt/live/example.com
 LILY_NGINX_TARGET=/var/www/example/infra/nginx
+COOKIE_DOMAIN=.example.com
