--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ SESSION_ID=SID
 LILY_CERTIFICATE_BASED_DIRECTORY=/etc/letsencrypt/live/example.com
 LILY_NGINX_TARGET=/var/www/example/infra/nginx
 COOKIE_DOMAIN=.example.com
+SLACK_TOKEN=
+SLACK_CHANNEL=
