--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ LILY_NGINX_TARGET=/var/www/example/infra/nginx
 COOKIE_DOMAIN=.example.com
 SLACK_TOKEN=
 SLACK_CHANNEL=
+SLACK_BOT_NAME=
+APPLICATION_NAME=
+DEPLOY_DIRECTORY=
+DEPLOY_USER=
